# Strata-Cognitive-Kernel

./: Cargo.toml  README.md  RELEASE.md
scripts/: build-release.sh  test-release.sh
src/: entropy.rs  kernel.rs  lib.rs  main.rs  triage.rs
strata/: Cargo.toml  events.jsonl
strata/docs/: ABI_v0_3.md  KERNEL_INVARIANTS.md
strata/fixtures/: v1_snapshot.json
strata/src/: bootstrap.rs  causal.rs  compatibility.rs  describe.rs  error.rs  event.rs  graph.rs  harness.rs  kernel.rs  lib.rs  main.rs  persistence.rs  session.rs  test_utils.rs  version.rs
strata/src/api/: command.rs  dispatcher.rs  envelope.rs  mod.rs  query.rs  result.rs  traits.rs
strata/src/cli/: mod.rs
strata/src/kernel/: compatibility.rs  engine.rs  error.rs  event.rs  hash.rs  mod.rs  replay.rs  version.rs
strata/src/observability/: audit_log.rs  export.rs  metrics.rs  mod.rs  verifier.rs
strata/src/ontology/: types.rs
strata/src/persistence/: mod.rs
strata/src/projection/: causal.rs  harness.rs  mod.rs  normalizer.rs
strata/src/workflow/: mod.rs
strata/tests/: abi_compatibility_tests.rs  api_dispatcher_tests.rs  audit_log_tests.rs  bootstrap_tests.rs  command_equivalence.rs  external_consumer.rs  metrics_tests.rs  observability_export_tests.rs  observability_phase_e_gate.rs  observability_verifier_tests.rs  output_contract_tests.rs  repl_tests.rs  verification.rs
tests/: abi_contract_tests.rs  e2_deterministic.rs  e3_event_explosion.rs  e4_consistency.rs  e6_replay_scalability.rs  e7_e10_entropy.rs  event_translator_tests.rs  execution_adapter_tests.rs  trace_tests.rs  (+1 more)
(+68 files in other folders)
