[package]
name = "strata-kill-test"
version = "1.0.0"
edition = "2021"

[lib]
name = "strata_kill_test"
path = "src/lib.rs"

[[bin]]
name = "strata"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
debug = false

[profile.dev]
strip = "debuginfo"
debug = false

[profile.test]
strip = "debuginfo"
debug = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
