[package]
name = "strata"
version = "0.1.0"
edition = "2021"

[lib]
name = "strata"
path = "src/lib.rs"

[[bin]]
name = "strata"
path = "src/main.rs"

[[bin]]
name = "repl"
path = "src/bin/repl.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
